--- a/HelloUnreal/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HelloUnreal/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -172,14 +172,17 @@ LastLevel=/Game/ThirdPerson/Entry/GameMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
@@ -192,25 +195,16 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=PhysicsAssetEditor
-OpenAssetsAtExit=/Game/ThirdPerson/Game/BP_GameState.BP_GameState
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Hud.BP_Hud
-OpenAssetsAtExit=/Game/ThirdPerson/Quiz3/GreenCntWidget.GreenCntWidget
-OpenAssetsAtExit=/Game/ThirdPerson/Game/CountDownWidget.CountDownWidget
-OpenAssetsAtExit=/Game/ThirdPerson/Quiz3/HudWidget.HudWidget
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPerson/Game/EN_GameState.EN_GameState
-OpenAssetsAtExit=/Game/ThirdPerson/Game/BP_GameMode.BP_GameMode
+OpenAssetsAtExit=/Game/ThirdPerson/Widget/EndWidget.EndWidget
 OpenAssetsAtExit=/Game/ThirdPerson/Entry/EntryHudWidget.EntryHudWidget
+OpenAssetsAtExit=/Game/ThirdPerson/Widget/HudWidget.HudWidget
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -226,8 +220,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=792.000 Y=404.667
-WindowSize=X=1294.000 Y=734.000
+ScreenPosition=X=1290.667 Y=174.667
+WindowSize=X=1296.000 Y=736.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2533,7 +2527,7 @@ EditorProjectAppearanceSettings.ReferenceViewer=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
 UMGEditorProjectSettings.Designer=True
-UMGEditorProjectSettings.Designer =True
+UMGEditorProjectSettings.Designer=True
 ClassViewerProjectSettings.ClassVisibilityManagement=True
 TextureImportSettings.VirtualTextures=True
 TextureImportSettings.ImportSettings=True
@@ -2817,6 +2811,19 @@ EntryHudWidget_C.Localization=True
 EntryHudWidget_C.Accessibility=True
 EntryHudWidget_C.Rendering=True
 EntryHudWidget_C.Navigation=True
+UMGEditorProjectSettings.Designer =True
+EndWidget_C.Layout=True
+EndWidget_C.Appearance=True
+EndWidget_C.Input=True
+EndWidget_C.Accessibility=True
+EndWidget_C.Interaction=True
+EndWidget_C.Performance=True
+EndWidget_C.Behavior=True
+EndWidget_C.Render Transform=True
+EndWidget_C.Rendering=True
+EndWidget_C.Navigation=True
+EndWidget_C.Localization=True
+EndWidget_C.Events=True
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Animation=True
@@ -2827,6 +2834,7 @@ PhysicsAssetGenerationSettings.Body Creation=False
 TextBlock.Appearance=False
 TextBlock.Accessibility=False
 TextBlock.Performance=False
+EndWidget_C.Behavior=False
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2947,36 +2955,36 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Entry/GameMap
-MRUItem1=/Game/ThirdPerson/Entry/EntryMap
-MRUItem2=/Game/ThirdPerson/Entry/EntryHudWidget
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem4=/Game/ThirdPerson/Quiz3/HudWidget
-MRUItem5=/Game/ThirdPerson/Game/CountDownWidget
-MRUItem6=/Game/ThirdPerson/Game/BP_GameMode
-MRUItem7=/Game/ThirdPerson/Quiz3/GreenCntWidget
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_Hud
-MRUItem9=/Game/ThirdPerson/Game/EN_GameState
-MRUItem10=/Game/ThirdPerson/Game/BP_GameState
-MRUItem11=/Game/ThirdPerson/Blueprints/BP_Ball
-MRUItem12=/Game/ThirdPerson/Entry/Landscape_Material
-MRUItem13=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem14=/Game/ThirdPerson/Entry/BP_EntryHud
-MRUItem15=/Game/ThirdPerson/Blueprints/BP_PlayerState
-MRUItem16=/Game/ThirdPerson/Quiz3/BP_Green
-MRUItem17=/Game/ThirdPerson/Quiz3/BP_Coin
-MRUItem18=/Game/ThirdPerson/Quiz3/BP_Heal
-MRUItem19=/Game/ThirdPerson/Quiz3/BP_Bomb
-MRUItem20=/Game/ThirdPerson/Quiz3/HpWidget
-MRUItem21=/Game/ThirdPerson/Blueprints/BP_Bullet
-MRUItem22=/Game/ThirdPerson/Meshes/Bomb
-MRUItem23=/Game/ThirdPerson/Meshes/Coin
-MRUItem24=/Game/ThirdPerson/Quiz3/CoinTextWidget
-MRUItem25=/Game/ThirdPerson/Blueprints/BP_PlayerController
-MRUItem26=/Game/ThirdPerson/Quiz2/BP_HellGate
-MRUItem27=/Game/ThirdPerson/Quiz2/BP_Even
-MRUItem28=/Game/ThirdPerson/Quiz2/BP_SingleCountBox
-MRUItem29=/Game/Characters/Mannequins/Rigs/PA_Mannequin
+MRUItem0=/Game/ThirdPerson/Entry/EntryHudWidget
+MRUItem1=/Game/ThirdPerson/Widget/EndWidget
+MRUItem2=/Game/ThirdPerson/Widget/HudWidget
+MRUItem3=/Game/ThirdPerson/Widget/CountDownWidget
+MRUItem4=/Game/ThirdPerson/Widget/HpWidget
+MRUItem5=/Game/ThirdPerson/Widget/GreenCntWidget
+MRUItem6=/Game/ThirdPerson/Widget/CoinTextWidget
+MRUItem7=/Game/ThirdPerson/Blueprints/BP_Hud
+MRUItem8=/Game/ThirdPerson/Entry/GameMap
+MRUItem9=/Game/ThirdPerson/Entry/EntryMap
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem11=/Game/ThirdPerson/Game/BP_GameMode
+MRUItem12=/Game/ThirdPerson/Game/EN_GameState
+MRUItem13=/Game/ThirdPerson/Game/BP_GameState
+MRUItem14=/Game/ThirdPerson/Blueprints/BP_Ball
+MRUItem15=/Game/ThirdPerson/Entry/Landscape_Material
+MRUItem16=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem17=/Game/ThirdPerson/Entry/BP_EntryHud
+MRUItem18=/Game/ThirdPerson/Blueprints/BP_PlayerState
+MRUItem19=/Game/ThirdPerson/Quiz3/BP_Green
+MRUItem20=/Game/ThirdPerson/Quiz3/BP_Coin
+MRUItem21=/Game/ThirdPerson/Quiz3/BP_Heal
+MRUItem22=/Game/ThirdPerson/Quiz3/BP_Bomb
+MRUItem23=/Game/ThirdPerson/Blueprints/BP_Bullet
+MRUItem24=/Game/ThirdPerson/Meshes/Bomb
+MRUItem25=/Game/ThirdPerson/Meshes/Coin
+MRUItem26=/Game/ThirdPerson/Blueprints/BP_PlayerController
+MRUItem27=/Game/ThirdPerson/Quiz2/BP_HellGate
+MRUItem28=/Game/ThirdPerson/Quiz2/BP_Even
+MRUItem29=/Game/ThirdPerson/Quiz2/BP_SingleCountBox
 
 [DetailPropertyExpansion]
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[21]\" "
@@ -3163,6 +3171,7 @@ Field="\"Object\" "
 CountDownWidget_C="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 EdGraphNode="\"Object\" "
+EndWidget_C="\"Object\" "
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -3223,6 +3232,8 @@ RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_Hurdle.BP_Hurdle;
 /Game/ThirdPerson/Game/CountDownWidget.CountDownWidget=0
 /Game/ThirdPerson/Game/EN_GameState.EN_GameState=0
 /Game/ThirdPerson/Game/BP_GameMode.BP_GameMode=0
+/Game/ThirdPerson/Widget/EndWidget.EndWidget=0
+/Game/ThirdPerson/Widget/HudWidget.HudWidget=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
